Fixed the booking form radius buttons and spacing

--- a/capstone/mysite/static/mysite/styles/pages/_bookingForm.scss
+++ b/capstone/mysite/static/mysite/styles/pages/_bookingForm.scss
@@ -50,6 +50,7 @@
         overflow: auto;
         scroll-behavior: smooth;
         color: colors.$white;
+        margin-bottom: 1em;
 
         background-image: linear-gradient(
             to right,
@@ -244,7 +245,7 @@
           .btn {
             @include buttons.btn;
 
-            :not(:last-child) {
+            &:not(:last-child) {
               margin-right: 0.4em;
             }
           }
